# screenrecorder

./: .gitignore  README.md  com.github.mohelm97.screenrecorder.yml  meson.build
.flatpak-builder/cache/: summary  summary.idx
.flatpak-builder/cache/refs/heads/app/com.github.mohelm97.screenrecorder/x86_64/: master
.flatpak-builder/cache/refs/heads/runtime/com.github.mohelm97.screenrecorder.Debug/x86_64/: master
.flatpak-builder/cache/refs/heads/runtime/com.github.mohelm97.screenrecorder.Locale/x86_64/: master
.flatpak-builder/cache/refs/heads/x86_64-com.github.mohelm97.screenrecorder.yml/: build-com.github.mohelm97.screenrecorder  cleanup  finish  init
.flatpak-builder/cache/summaries/: 10feab0fb86d46c1bc94f46aca6fdd2735360f554a1f19027dfa03c1902338da-a5a602f942996c3a3f097241cf17bd6dc8f3397100f30c9dfc4b63cb41d2b489.delta  5afad96c9228ebb23bf147514f7816ff30673577ba8f658067cf83926b651779-a5a602f942996c3a3f097241cf17bd6dc8f3397100f30c9dfc4b63cb41d2b489.delta  7bbb0854b099ce8455b35cfccd4bbcf746af0aff30337b6ab857e1ee2436f23c-a5a602f942996c3a3f097241cf17bd6dc8f3397100f30c9dfc4b63cb41d2b489.delta  89584a63098a0f0e9b539d7487bca27c995655a7194e9ea313dc1aeac6ef6ad5-a5a602f942996c3a3f097241cf17bd6dc8f3397100f30c9dfc4b63cb41d2b489.delta  900453571575a3be31599e539a8437ddb86b43d93ae7805a95c622e5575e526c-a5a602f942996c3a3f097241cf17bd6dc8f3397100f30c9dfc4b63cb41d2b489.delta  966f37b5e59e0fc24e25c2065cb09864db9ca262d6cf7a781146834ffe982130-a5a602f942996c3a3f097241cf17bd6dc8f3397100f30c9dfc4b63cb41d2b489.delta  9857a8e9c86d96891b225dbbb2e9419c072c1b0372f564a983ed0002348332dd-a5a602f942996c3a3f097241cf17bd6dc8f3397100f30c9dfc4b63cb41d2b489.delta  a832d8cd137d329c5c3ee6c8edb196be0af0dac70c3473e25ff4b3dbe88911f0-a5a602f942996c3a3f097241cf17bd6dc8f3397100f30c9dfc4b63cb41d2b489.delta  e3a407bbe8e7560672691659646266b49e58d1499e8d2a3a044fa1ac59a42c6c-a5a602f942996c3a3f097241cf17bd6dc8f3397100f30c9dfc4b63cb41d2b489.delta  ef4cbf50b081c2d98d33fcdec5703140832d8d11e1958c8a8b3aeb63248c64d6-a5a602f942996c3a3f097241cf17bd6dc8f3397100f30c9dfc4b63cb41d2b489.delta
.flatpak-builder/checksums/: x86_64-com.github.mohelm97.screenrecorder.yml
data/: com.github.mohelm97.screenrecorder.appdata.xml.in  com.github.mohelm97.screenrecorder.desktop.in  com.github.mohelm97.screenrecorder.gresource.xml  com.github.mohelm97.screenrecorder.gschema.xml  meson.build
debian/: changelog  control  copyright  rules
meson/: post_install.py
po/: LINGUAS  POTFILES  ar.mo  ar.po  com.github.mohelm97.screenrecorder.pot  da.po  es.po  fr.mo  fr.po  ja.po  lt.po  nl.po  pl.po  pt.po  pt_BR.po  ru.mo  ru.po
src/: Application.vala  FFmpegWrapper.vala  MainWindow.vala  SaveDialog.vala  meson.build
src/Utils/: KeybindingManager.vala
src/Widgets/: FormatComboBox.vala  ScaleComboBox.vala  SelectionArea.vala  VideoPlayer.vala
